# OpenStudio

./: .gitignore  BUILDING.md  BUILD_WINDOWS_DEPS.md  CMakeLists.txt  CODE_SIGNING_SETUP.md  CTestConfig.cmake  Jenkinsfile_develop_osx  Jenkinsfile_develop_ubuntu_2404  Jenkinsfile_develop_windows  conanfile.py  full-build-plan.md  openstudio_full_build_develop.groovy  sonar-project.properties
.bundle/: config
.github/ISSUE_TEMPLATE/: 01-bug-report.yml
.github/signing-client/: code-signing.js  sign.bat
.github/workflows/: build-windows-deps.yml  buildCSharp.yml  checksums.yml  full-build-github-hosted.yml  full-build-mac-arm.yml  full-build.yml  incremental-build.yml  python_bindings.yml  test-event.json  test-ubuntu-only.yml
.github/workflows-migration/: AWS_SIGNING_CHECKLIST.md  DEPLOYMENT_CHECKLIST.md  MIGRATION_GUIDE.md  NEXT_STEPS.md  QUICK_START.md  README.md
ci/: test_utils.sh
developer/ruby/: BlameFiles.rb  GenerateClass.rb  SwigWrapToRDoc.rb
doc/: CDash_TOKEN.md
python/engine/: PythonEngine.cpp
python/test/: CMakeLists.txt
resources/: CMakeLists.txt
resources/energyplus/: NewFileTemplate.idf  (+1 more)
src/modelica/: CMakeLists.txt  Modelica.i  ModelicaAPI.hpp  ModelicaFile.cpp  ModelicaFile.hpp  ModelicaFileImpl.cpp  ModelicaFileImpl.hpp  main.cpp
src/modelica/antlr/: Dockerfile  README.md  modelicaBaseListener.cpp  modelicaBaseListener.h  modelicaBaseVisitor.cpp  modelicaBaseVisitor.h  modelicaLexer.cpp  modelicaLexer.h  modelicaListener.cpp  modelicaListener.h  modelicaParser.cpp  modelicaParser.h  modelicaVisitor.cpp  modelicaVisitor.h
(+552 files in other folders)
